# convertmodel

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake  main.cpp  ncnnoptimize.cpp  test.cpp
include/: ncnnoptimize.h  ncnnreader.h  onnx2ncnn.h  optimizer.h  run_ncnnoptimizer.h
ncnn_src/: modelwriter.h  platform.h
src/: ncnnoptimize.cpp  onnx2ncnn.cpp  optimizer.cpp  run_ncnnoptimzer.cpp
